lbaas/netscaler/specs/cpx-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: cpx
spec:
  template:
    metadata:
      name: cpx
      labels:
        app: cpx-daemon
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      hostNetwork: true
      containers:
        - name: cpx
          image: "store/citrix/netscalercpx:12.0-56.20"
          securityContext:
             privileged: true
          volumeMounts:
          imagePullPolicy: Always
