lbaas/netscaler/specs/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    NETSCALER_HTTP_PORT: "5080"
    NETSCALER_VIP: "172.16.137.5"
spec:
 # tls:
 # - hosts:
 #   - cafe.example.com
 #   secretName: cafe-secret
  rules:
  - host: my.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
